--- a/notebooks/cleandata.ipynb
+++ b/notebooks/cleandata.ipynb
@@ -775,6 +775,121 @@
     "df_encoded = pd.get_dummies(df, columns=[\"arrival_mode\"], drop_first=True)\n",
     "df_encoded.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "0c9705ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = df_encoded.drop(\"triage_level\", axis=1)\n",
+    "y = df_encoded[\"triage_level\"]\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.2, random_state=42, stratify=y\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "6c161073",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.96      0.98      0.97      1985\n",
+      "           1       0.90      0.89      0.89       897\n",
+      "           2       0.93      0.90      0.92       540\n",
+      "           3       0.96      0.94      0.95       178\n",
+      "\n",
+      "    accuracy                           0.94      3600\n",
+      "   macro avg       0.94      0.93      0.93      3600\n",
+      "weighted avg       0.94      0.94      0.94      3600\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "model = RandomForestClassifier(random_state=42)\n",
+    "model.fit(X_train, y_train)\n",
+    "y_pred = model.predict(X_test)\n",
+    "\n",
+    "print(classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "25f743c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'max_depth': 20, 'min_samples_split': 2, 'n_estimators': 200}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "param_grid = {\n",
+    "    \"n_estimators\": [100, 200, 300],\n",
+    "    \"max_depth\": [None, 10, 20],\n",
+    "    \"min_samples_split\": [2, 5, 10]\n",
+    "}\n",
+    "\n",
+    "grid = GridSearchCV(RandomForestClassifier(random_state=42),\n",
+    "                    param_grid, cv=3, scoring=\"f1_macro\")\n",
+    "grid.fit(X_train, y_train)\n",
+    "print(grid.best_params_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "881b898b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from imblearn.over_sampling import SMOTE\n",
+    "smote = SMOTE(random_state=42)\n",
+    "X_train_res, y_train_res = smote.fit_resample(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "7f749807",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['C:/Users/risha/Documents/Healthcare-Assistant/src/model.pkl']"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import joblib\n",
+    "joblib.dump(model, \"C:/Users/risha/Documents/Healthcare-Assistant/src/model.pkl\")"
+   ]
   }
  ],
  "metadata": {
