--- a/notebooks/cleandata.ipynb
+++ b/notebooks/cleandata.ipynb
@@ -2,12 +2,143 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "6564f13c",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "age",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "heart_rate",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "systolic_blood_pressure",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "oxygen_saturation",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "body_temperature",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "pain_level",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "chronic_disease_count",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "previous_er_visits",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "arrival_mode",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "triage_level",
+         "rawType": "int64",
+         "type": "integer"
+        }
+       ],
+       "ref": "b59de985-6118-42c2-8e31-91ad79cd5040",
+       "rows": [
+        [
+         "0",
+         "17.9",
+         "95.4",
+         "147.1",
+         "97.4",
+         "36.48",
+         "1",
+         "0",
+         "0",
+         "walk_in",
+         "0"
+        ],
+        [
+         "1",
+         "79.2",
+         "147.9",
+         "158.6",
+         "96.0",
+         "39.35",
+         "10",
+         "4",
+         "2",
+         "ambulance",
+         "3"
+        ],
+        [
+         "2",
+         "51.1",
+         "87.1",
+         "128.2",
+         "98.5",
+         "37.74",
+         "5",
+         "2",
+         "2",
+         "walk_in",
+         "1"
+        ],
+        [
+         "3",
+         "56.8",
+         "84.7",
+         "147.2",
+         "92.5",
+         "37.55",
+         "4",
+         "4",
+         "4",
+         "walk_in",
+         "1"
+        ],
+        [
+         "4",
+         "39.2",
+         "58.0",
+         "107.8",
+         "99.0",
+         "36.26",
+         "2",
+         "1",
+         "1",
+         "walk_in",
+         "0"
+        ]
+       ],
+       "shape": {
+        "columns": 10,
+        "rows": 5
+       }
+      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -132,25 +263,86 @@
        "4      walk_in             0  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_csv(\"C:/Users/risha/Documents/Healthcare-Triage-Assistant/data/raw/synthetic_medical_triage.csv\")\n",
+    "df = pd.read_csv(\"E:/Studies/Self/Healthcare-Triage-Assistant/data/raw/synthetic_medical_triage.csv\")\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "b5d57979",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "0",
+         "rawType": "int64",
+         "type": "integer"
+        }
+       ],
+       "ref": "f47cfc45-9d9a-48fc-97f0-df0d7e36cac4",
+       "rows": [
+        [
+         "age",
+         "0"
+        ],
+        [
+         "heart_rate",
+         "0"
+        ],
+        [
+         "systolic_blood_pressure",
+         "0"
+        ],
+        [
+         "oxygen_saturation",
+         "0"
+        ],
+        [
+         "body_temperature",
+         "0"
+        ],
+        [
+         "pain_level",
+         "0"
+        ],
+        [
+         "chronic_disease_count",
+         "0"
+        ],
+        [
+         "previous_er_visits",
+         "0"
+        ],
+        [
+         "arrival_mode",
+         "0"
+        ],
+        [
+         "triage_level",
+         "0"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 10
+       }
+      },
       "text/plain": [
        "age                        0\n",
        "heart_rate                 0\n",
@@ -165,7 +357,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "4fea6243",
    "metadata": {},
    "outputs": [
@@ -186,7 +378,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "bea82f51",
    "metadata": {},
    "outputs": [
@@ -222,12 +414,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "4c470f08",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "age",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "heart_rate",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "systolic_blood_pressure",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "oxygen_saturation",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "body_temperature",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "pain_level",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "chronic_disease_count",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "previous_er_visits",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "triage_level",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "ref": "994dbd1c-0b17-4522-bec8-11f5ee5265cd",
+       "rows": [
+        [
+         "count",
+         "18000.0",
+         "18000.0",
+         "18000.0",
+         "18000.0",
+         "18000.0",
+         "18000.0",
+         "18000.0",
+         "18000.0",
+         "18000.0"
+        ],
+        [
+         "mean",
+         "44.71624444444444",
+         "83.29232222222221",
+         "128.0727388888889",
+         "96.08518333333333",
+         "37.22423611111111",
+         "3.402111111111111",
+         "1.0726111111111112",
+         "1.2650555555555556",
+         "0.6977222222222222"
+        ],
+        [
+         "std",
+         "19.101056079686337",
+         "16.964405039129304",
+         "18.813276535980286",
+         "3.330829833393033",
+         "0.9149784721854978",
+         "2.0392492942728535",
+         "1.3122038111644219",
+         "1.4548871021668182",
+         "0.8989226475508642"
+        ],
+        [
+         "min",
+         "0.0",
+         "33.4",
+         "65.8",
+         "79.5",
+         "34.47",
+         "1.0",
+         "0.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "25%",
+         "31.2",
+         "71.5",
+         "114.9",
+         "94.3",
+         "36.58",
+         "2.0",
+         "0.0",
+         "0.0",
+         "0.0"
+        ],
+        [
+         "50%",
+         "44.0",
+         "81.6",
+         "126.9",
+         "96.6",
+         "37.12",
+         "3.0",
+         "1.0",
+         "1.0",
+         "0.0"
+        ],
+        [
+         "75%",
+         "57.5",
+         "93.2",
+         "139.9",
+         "98.7",
+         "37.77",
+         "5.0",
+         "2.0",
+         "2.0",
+         "1.0"
+        ],
+        [
+         "max",
+         "95.0",
+         "152.3",
+         "219.7",
+         "100.0",
+         "41.13",
+         "10.0",
+         "10.0",
+         "11.0",
+         "3.0"
+        ]
+       ],
+       "shape": {
+        "columns": 9,
+        "rows": 8
+       }
+      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -391,7 +740,7 @@
        "max             11.000000      3.000000  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "9f236c8d",
    "metadata": {},
    "outputs": [
@@ -424,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "f8da87a8",
    "metadata": {},
    "outputs": [
@@ -446,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "ce6d79f1",
    "metadata": {},
    "outputs": [
@@ -468,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "02c5e21b",
    "metadata": {},
    "outputs": [
@@ -490,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "58153cab",
    "metadata": {},
    "outputs": [
@@ -512,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "c2bc6fc9",
    "metadata": {},
    "outputs": [
@@ -534,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "9b016a0c",
    "metadata": {},
    "outputs": [
@@ -556,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "9e4840eb",
    "metadata": {},
    "outputs": [
@@ -578,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "62a297e8",
    "metadata": {},
    "outputs": [
@@ -600,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "b97d0428",
    "metadata": {},
    "outputs": [
@@ -610,7 +959,7 @@
        "array(['walk_in', 'ambulance', 'wheelchair'], dtype=object)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -621,12 +970,163 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "bc9a6256",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "age",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "heart_rate",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "systolic_blood_pressure",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "oxygen_saturation",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "body_temperature",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "pain_level",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "chronic_disease_count",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "previous_er_visits",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "triage_level",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "arrival_mode_ambulance",
+         "rawType": "bool",
+         "type": "boolean"
+        },
+        {
+         "name": "arrival_mode_walk_in",
+         "rawType": "bool",
+         "type": "boolean"
+        },
+        {
+         "name": "arrival_mode_wheelchair",
+         "rawType": "bool",
+         "type": "boolean"
+        }
+       ],
+       "ref": "d68956c3-3257-4a47-a61e-42185801012b",
+       "rows": [
+        [
+         "0",
+         "17.9",
+         "95.4",
+         "147.1",
+         "97.4",
+         "36.48",
+         "1",
+         "0",
+         "0",
+         "0",
+         "False",
+         "True",
+         "False"
+        ],
+        [
+         "1",
+         "79.2",
+         "147.9",
+         "158.6",
+         "96.0",
+         "39.35",
+         "10",
+         "4",
+         "2",
+         "3",
+         "True",
+         "False",
+         "False"
+        ],
+        [
+         "2",
+         "51.1",
+         "87.1",
+         "128.2",
+         "98.5",
+         "37.74",
+         "5",
+         "2",
+         "2",
+         "1",
+         "False",
+         "True",
+         "False"
+        ],
+        [
+         "3",
+         "56.8",
+         "84.7",
+         "147.2",
+         "92.5",
+         "37.55",
+         "4",
+         "4",
+         "4",
+         "1",
+         "False",
+         "True",
+         "False"
+        ],
+        [
+         "4",
+         "39.2",
+         "58.0",
+         "107.8",
+         "99.0",
+         "36.26",
+         "2",
+         "1",
+         "1",
+         "0",
+         "False",
+         "True",
+         "False"
+        ]
+       ],
+       "shape": {
+        "columns": 12,
+        "rows": 5
+       }
+      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -770,7 +1270,7 @@
        "4                    False  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -782,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "0c9705ac",
    "metadata": {},
    "outputs": [],
@@ -799,7 +1299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "id": "6c161073",
    "metadata": {},
    "outputs": [
@@ -834,7 +1334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "25f743c2",
    "metadata": {},
    "outputs": [
@@ -863,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "881b898b",
    "metadata": {},
    "outputs": [],
@@ -875,24 +1375,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "id": "7f749807",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['C:/Users/risha/Documents/Healthcare-Triage-Assistant/src/model.pkl']"
+       "['E:/Studies/Self/Healthcare-Triage-Assistant/src/model.pkl']"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import joblib\n",
-    "joblib.dump(model, \"C:/Users/risha/Documents/Healthcare-Triage-Assistant/src/model.pkl\")"
+    "joblib.dump(model, \"E:/Studies/Self/Healthcare-Triage-Assistant/src/model.pkl\")"
    ]
   }
  ],
@@ -912,7 +1412,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.3"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
