updated documentation/comments for users.

--- a/notebooks/cleandata.ipynb
+++ b/notebooks/cleandata.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "6564f13c",
    "metadata": {},
    "outputs": [
@@ -270,6 +270,7 @@
    ],
    "source": [
     "import pandas as pd\n",
+    "#update file path as needed to load yours or for dataset included in repo\n",
     "df = pd.read_csv(\"E:/Studies/Self/Healthcare-Triage-Assistant/data/raw/synthetic_medical_triage.csv\")\n",
     "df.head()"
    ]
@@ -1375,7 +1376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "7f749807",
    "metadata": {},
    "outputs": [
@@ -1392,6 +1393,7 @@
    ],
    "source": [
     "import joblib\n",
+    "#update file path as needed to your preffered location for saving the model\n",
     "joblib.dump(model, \"E:/Studies/Self/Healthcare-Triage-Assistant/src/model.pkl\")"
    ]
   }
